--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  date_field: ^4.0.0
+  flutter_svg_provider: ^1.0.7
+  
 
 dev_dependencies:
   flutter_test:
