--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.4
   fl_chart: ^0.66.2
   google_fonts: ^6.1.0
+  animate_do: ^3.3.3
 
 dev_dependencies:
   flutter_test:
