Brayan Cañas: Uso de Dio para conectar backend Login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animate_do: ^3.3.3
   image_picker: ^1.0.7
   flutter_svg: ^2.0.10+1
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
