--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.0.7
   flutter_svg: ^2.0.10+1
   dio: ^5.4.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
