--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.4.1
   provider: ^6.1.1
   shared_preferences: ^2.2.2
+  unique_simple_bar_chart: ^0.0.4
 
 dev_dependencies:
   flutter_test:
